# scalka

./: CMakeLists.txt  README.md
src/: calc_object.h  config.c  config.h  config_data.c  config_loader.c  edit_settings.c  edit_settings.h  main.c  mainmenu.c  mainmenu.h  operation.c  operation.h  settings.c  settings.h  stack.c  stack.h
src/ui/: icons.h  insert_operation.c  insert_operation.h  keydesc.h  lgp.h  menu_options.c  menu_options.h  ui.c  ui.h
